# kohyama-21_model

./: .gitignore  LICENSE  README.md  docker-compose.yml  make_env.sh
docker/python_linux/: pyproject.toml
docker/python_linux/.jupyter/lab/user-settings/@jupyterlab-contrib/spellchecker/: plugin.jupyterlab-settings
docker/python_mac/: pyproject.toml
docker/python_mac/.jupyter/lab/user-settings/@jupyter-lsp/jupyterlab-lsp/: diagnostics.jupyterlab-settings
docker/pytorch_linux/.jupyter/lab/user-settings/@jupyter-lsp/jupyterlab-lsp/: diagnostics.jupyterlab-settings
docker/pytorch_mac/: Dockerfile
python/: run_model.ipynb
python/src/: base_config.py  config.py  model.py  random_seed_helper.py
