[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.26.1"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"
pandas = "^2.1.2"
tqdm = "^4.66.1"
xarray = "^2023.10.1"
netcdf4 = "^1.6.5"
pyyaml = "^6.0.1"
h5netcdf = "^1.3.0"
idtxl = {git = "https://github.com/pwollstadt/IDTxl", rev = "v1.4"}
jpype1 = "^1.4.1"
tabulate = "^0.9.0"
statsmodels = "^0.14.0"
numba = "^0.58.1"
cython = "^3.0.5"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.1.1-cp310-cp310-manylinux_2_17_aarch64.manylinux2014_aarch64.whl#sha256=84fefd63356416c0cd20578637ccdbb82164993400ed17b57c951dd6376dcee8"}


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
ipython = "^8.17.2"
ipykernel = "^6.26.0"
ipywidgets = "^8.1.1"
jupyterlab = "^4.0.8"
python-lsp-server = {extras = ["all"], version = "^1.9.0"}
jupyter-lsp = "^2.2.0"
jupyterlab-lsp = "^5.0.0"
jupyterlab-code-formatter = "^2.2.1"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
cartopy = "^0.22.0"
networkx = "^3.2.1"


[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
